--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sort-by": "^1.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
